19-feat: creacion de los endpoints de vistas y sus controladores(Utilizamos querys SQL).doc: actualizacion de swagger.
